# corefx

src/Common/src/Interop/Unix/: Interop.Libraries.cs
src/Common/src/Interop/Unix/System.Net.Security.Native/: Interop.Gss.cs
src/Common/src/Interop/Unix/System.Security.Cryptography.Native/: Interop.Ssl.cs  Interop.X509.cs
src/Common/src/Interop/Unix/libcrypto/: Interop.X509.cs
src/Common/src/Interop/Unix/libgss/: Interop.GssApi.cs
src/Common/src/Interop/Unix/libssl/: Interop.ChannelBinding.cs  Interop.OpenSsl.cs  Interop.SafeSslHandle.cs  Interop.libssl.cs  (+2 more)
src/Native/: CMakeLists.txt
src/Native/System.Net.Security.Native/: CMakeLists.txt  pal_gssapi.cpp  pal_gssapi.h
src/Native/System.Security.Cryptography.Native/: pal_x509.cpp  pal_x509.h
src/System.Collections.Immutable/tests/: ImmutableListTestBase.cs
src/System.Diagnostics.Process/src/System/Diagnostics/: ProcessManager.Windows.cs
src/System.Linq/src/System/Linq/: Enumerable.cs
src/System.Linq/tests/: System.Linq.Tests.csproj
src/System.Net.Http/src/: System.Net.Http.csproj
src/System.Net.Security/src/: System.Net.Security.csproj
src/System.Net.Security/src/Resources/: Strings.resx
src/System.Net.Security/src/System/Net/: SslStreamPal.Unix.cs  SslStreamPal.Windows.cs  _SecureChannel.cs
src/System.Reflection.Metadata/tests/Metadata/: HandleTests.cs
src/System.Security.Cryptography.X509Certificates/src/: System.Security.Cryptography.X509Certificates.csproj
src/System.Threading.Tasks/tests/: project.lock.json
src/System.Threading/src/: System.Threading.CoreCLR.csproj
(+10 files in other folders)
